--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 
+
+spring.config.import=file:env.properties
+
+server.port=3001
+
+
+spring.datasource.username=postgres
+spring.datasource.password=${PG_PASSWORD}
+spring.datasource.url=jdbc:postgresql://localhost:5432/Esercizio-17-11-2023Progetto
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.default_schema=public
+
+spring.jwt.secret=${JWT_SECRET}
+
+CLOUDINARY.NAME=${CLOUDINARY_NAME}
+CLOUDINARY.API_KEY=${CLOUDINARY_API_KEY}
+CLOUDINARY.SECRET=${CLOUDINARY_SECRET}
